logs/plugins/s/super-easy-testimonials/jspi-boot/error.log
file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:237
        throw new Error(y, { cause: u });
              ^

Error: [02-Jun-2025 23:50:11 UTC] PHP Warning:  Undefined array key "page" in /wordpress/wp-content/plugins/source-redirect-site/admin.php on line 7
[02-Jun-2025 23:50:12 UTC] PHP Warning:  Undefined array key "DOCUMENT_ROOT" in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php on line 452
[02-Jun-2025 23:50:12 UTC] PHP Warning:  require_once(/wp-config.php): Failed to open stream: No such file or directory in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php on line 452
[02-Jun-2025 23:50:12 UTC] PHP Fatal error:  Uncaught Error: Failed opening required '/wp-config.php' (include_path='.:') in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php:452
Stack trace:
#0 /wordpress/wp-settings.php(545): include_once()
#1 /wordpress/wp-config.php(102): require_once('/wordpress/wp-s...')
#2 /wordpress/wp-load.php(50): require_once('/wordpress/wp-c...')
#3 /internal/eval.php(3): require_once('/wordpress/wp-l...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php on line 452
[02-Jun-2025 23:50:20 UTC] PHP Warning:  Undefined array key "page" in /wordpress/wp-content/plugins/source-redirect-site/admin.php on line 7
[02-Jun-2025 23:50:21 UTC] PHP Warning:  Undefined array key "DOCUMENT_ROOT" in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php on line 452
[02-Jun-2025 23:50:21 UTC] PHP Warning:  require_once(/wp-config.php): Failed to open stream: No such file or directory in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php on line 452
[02-Jun-2025 23:50:21 UTC] PHP Fatal error:  Uncaught Error: Failed opening required '/wp-config.php' (include_path='.:') in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php:452
Stack trace:
#0 /wordpress/wp-settings.php(545): include_once()
#1 /wordpress/wp-config.php(102): require_once('/wordpress/wp-s...')
#2 /wordpress/wp-load.php(50): require_once('/wordpress/wp-c...')
#3 /internal/eval.php(3): require_once('/wordpress/wp-l...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php on line 452
[02-Jun-2025 23:50:29 UTC] PHP Warning:  Undefined array key "page" in /wordpress/wp-content/plugins/source-redirect-site/admin.php on line 7
[02-Jun-2025 23:50:30 UTC] PHP Warning:  Undefined array key "DOCUMENT_ROOT" in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php on line 452
[02-Jun-2025 23:50:30 UTC] PHP Warning:  require_once(/wp-config.php): Failed to open stream: No such file or directory in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php on line 452
[02-Jun-2025 23:50:30 UTC] PHP Fatal error:  Uncaught Error: Failed opening required '/wp-config.php' (include_path='.:') in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php:452
Stack trace:
#0 /wordpress/wp-settings.php(545): include_once()
#1 /wordpress/wp-config.php(102): require_once('/wordpress/wp-s...')
#2 /wordpress/wp-load.php(50): require_once('/wordpress/wp-c...')
#3 /internal/eval.php(3): require_once('/wordpress/wp-l...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/source-redirect-site/source-redirect.php on line 452
[02-Jun-2025 23:53:18 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[02-Jun-2025 23:53:26 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[02-Jun-2025 23:53:33 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2

    at Object.onBind (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:237:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async V (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:64:10)
    at async ja (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/cli.js:8161:12) {
  [cause]: Error: Error when executing the blueprint step #1 ({"step":"installPlugin","pluginData":{"resource":"wordpress.org/plugins","slug":"super-easy-testimonials"},"options":{"activate":true}}) : PHP.run() failed with exit code 255 and the following output: 
      at Object.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12449:19)
      at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
      at async ms (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12552:3)
      ... 2 lines matching cause stack trace ...
      at async ja (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/cli.js:8161:12) {
    [cause]: PHPExecutionFailureError: PHP.run() failed with exit code 255 and the following output: 
        at PHP.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@php-wasm/universal/index.js:987:19)
        at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
        at async wr (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:33:39)
        at async Object.gt [as installPlugin] (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:974:42)
        at async g (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12517:30)
        at async Object.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12446:23)
        at async ms (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12552:3)
        at async Object.onBind (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:227:48)
        at async V (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:64:10)
        at async ja (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/cli.js:8161:12) {
      response: PHPResponse {
        httpStatusCode: 500,
        headers: {
          'x-powered-by': [ 'PHP/8.0.30-dev' ],
          'content-type': [ 'text/html; charset=UTF-8' ]
        },
        bytes: Uint8Array(0) [],
        exitCode: 255,
        errors: ''
      },
      source: 'request'
    }
  }
}

Node.js v23.11.0
